# switch-auto-core

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: SerialPort.h  SwitchControlLibrary.cpp  SwitchControlLibrary.h
lib/lib/: SerialPort.h  SwitchControlLibrary.cpp  SwitchControlLibrary.h  SwitchReport.h
proto/: combination_graph.proto  helloworld.proto
src/exec/base/: BaseOperationProcess.h  ButtonOperator.h  EmptyOperate.h  ImuOperator.h  OperatorStrategy.h  ResetAllOperate.h  SleepOperate.h  StickOperate.h
src/exec/coroutine/: CoroutineUtils.h
src/repo/: DatabaseManager.h
src/repo/base/: BaseOperate.cpp  BaseOperate.h  IdGenerate.cpp  IdGenerate.h
src/repo/combination/: Combination.h  CombinationGraph.cpp  CombinationGraph.h
src/service/: BaseOperateService.cpp  BaseOperateService.h  CombinationGraphService.cpp  CombinationGraphService.h
src/service/mapper/: BaseOperateMapper.cpp  BaseOperateMapper.h  CombinationGraphMapper.cpp  CombinationGraphMapper.h
